--- a/TweetAndroidApp/app/src/main/res/layout/fragment_login.xml
+++ b/TweetAndroidApp/app/src/main/res/layout/fragment_login.xml
@@ -24,7 +24,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:hint="Enter Username"
-            android:text="@={viewModel.username}"
+            android:text="@={viewModel.userId}"
             app:layout_constraintVertical_chainStyle="packed"
             />
 
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Continue"
-            android:onClick="@{() -> viewModel.onContinueClicked()}"
+            android:onClick="@{() -> viewModel.login()}"
 
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
