--- a/TweetAndroidApp/app/src/main/res/values/colors.xml
+++ b/TweetAndroidApp/app/src/main/res/values/colors.xml
@@ -2,4 +2,32 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_primary">#6200EE</color>
+    <color name="light_on_primary">#FFFFFF</color>
+    <color name="light_primary_container">#BB86FC</color>
+    <color name="light_on_primary_container">#3700B3</color>
+
+    <color name="light_surface">#FFFFFF</color>
+    <color name="light_on_surface">#000000</color>
+    <color name="light_background">#F1F1F1</color>
+    <color name="light_on_background">#000000</color>
+
+    <color name="light_secondary">#03DAC5</color>
+    <color name="light_on_secondary">#000000</color>
+
+    <color name="dark_primary">#BB86FC</color>
+    <color name="dark_on_primary">#000000</color>
+    <color name="dark_primary_container">#3700B3</color>
+    <color name="dark_on_primary_container">#FFFFFF</color>
+
+    <color name="dark_surface">#121212</color>
+    <color name="dark_on_surface">#FFFFFF</color>
+    <color name="dark_background">#000000</color>
+    <color name="dark_on_background">#FFFFFF</color>
+
+    <color name="dark_secondary">#03DAC5</color>
+    <color name="dark_on_secondary">#000000</color>
+
+    <color name="editTextColor">#000000</color> <!-- Black text -->
+    <color name="editTextHintColor">#757575</color> <!-- Gray hint -->
 </resources>
