--- a/TweetAndroidApp/app/src/main/res/values-night/themes.xml
+++ b/TweetAndroidApp/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,26 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <!-- Base application theme. -->
     <style name="Base.Theme.TweetAndroidApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <!-- Dark theme primary colors -->
+        <item name="colorPrimary">@color/dark_primary</item>
+        <item name="colorOnPrimary">@color/dark_on_primary</item>
+        <item name="colorPrimaryContainer">@color/dark_primary_container</item>
+        <item name="colorOnPrimaryContainer">@color/dark_on_primary_container</item>
+
+        <!-- Surface and background colors -->
+        <item name="colorSurface">@color/dark_surface</item>
+        <item name="colorOnSurface">@color/dark_on_surface</item>
+        <item name="backgroundColor">@color/dark_background</item>
+        <item name="colorOnBackground">@color/dark_on_background</item>
+
+        <!-- Secondary colors -->
+        <item name="colorSecondary">@color/dark_secondary</item>
+        <item name="colorOnSecondary">@color/dark_on_secondary</item>
+
+        <!-- Toolbar style -->
+        <item name="actionBarTheme">@style/Widget.App.Toolbar</item>
     </style>
+
+    <style name="Theme.TweetAndroidApp" parent="Base.Theme.TweetAndroidApp" />
 </resources>
