--- a/TweetAndroidApp/app/src/main/res/layout/tweet_item.xml
+++ b/TweetAndroidApp/app/src/main/res/layout/tweet_item.xml
@@ -1,4 +1,6 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -6,28 +8,107 @@
             type="com.example.tweetandroidapp.models.TweetModel" />
     </data>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:paddingHorizontal="16dp"
+        android:paddingBottom="16dp"
+        >
 
-        <TextView
-            android:id="@+id/tweet_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{tweetModel.content}" />
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_launcher_foreground"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
             android:id="@+id/tweet_creator"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text='@{String.format(@string/by_creator, tweetModel.creatorId)}' />
-
+            android:text='@{String.format(@string/by_creator, tweetModel.creatorId)}'
+            android:textColor="?attr/colorSecondary"
+            android:textSize="16sp"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/profile_image"
+            app:layout_constraintEnd_toStartOf="@id/tweet_timestamp"
+            tools:text="testuser"
+            />
         <TextView
             android:id="@+id/tweet_timestamp"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text='@{String.format(@string/at_timestamp, tweetModel.createdAt)}' />
-    </LinearLayout>
+            android:text="@{tweetModel.getFormattedTime()}"
+            android:textColor="?attr/colorSecondary"
+            android:textSize="12sp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toTopOf="@id/tweet_creator"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="1:06AM Sept 27 2024"/>
+
+        <!-- Tweet Content -->
+        <TextView
+            android:id="@+id/tweet_content"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="16dp"
+            android:text="@{tweetModel.content}"
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@id/tweet_creator"
+            app:layout_constraintStart_toEndOf="@id/profile_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="8dp"
+            tools:text="This is my first tweet!"/>
+
+
+
+
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/tweet_content"
+            app:layout_constraintStart_toEndOf="@id/profile_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <!-- Reply Button -->
+            <ImageButton
+                android:id="@+id/btn_reply"
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:scaleType="centerInside"
+                android:layout_weight="1"
+                android:src="@drawable/ic_launcher_background"
+                android:background="?attr/selectableItemBackgroundBorderless" />
+
+            <!-- Retweet Button -->
+            <ImageButton
+                android:id="@+id/btn_retweet"
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:scaleType="centerInside"
+                android:layout_weight="1"
+                android:src="@drawable/ic_launcher_background"
+                android:background="?attr/selectableItemBackgroundBorderless" />
+
+            <!-- Like Button -->
+            <ImageButton
+                android:id="@+id/btn_like"
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:scaleType="centerInside"
+                android:layout_weight="1"
+                android:src="@drawable/ic_launcher_background"
+                android:background="?attr/selectableItemBackgroundBorderless"/>
+
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
