Successfully built and tested the application

--- a/TweetAndroidApp/app/src/main/res/layout/tweet_item.xml
+++ b/TweetAndroidApp/app/src/main/res/layout/tweet_item.xml
@@ -11,15 +11,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="16dp"
-        android:paddingBottom="16dp"
+        android:padding="16dp"
         >
 
         <ImageView
             android:id="@+id/profile_image"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_launcher_foreground"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/profile_user"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -54,7 +54,7 @@
             android:id="@+id/tweet_content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             android:layout_marginStart="16dp"
             android:text="@{tweetModel.content}"
             android:textSize="16sp"
@@ -65,15 +65,22 @@
             tools:text="This is my first tweet!"/>
 
 
-
-
-
+        <View
+            android:id="@+id/tweet_divider"
+            android:layout_width="match_parent"
+            android:layout_height="0.25dp"
+            android:background="@android:color/darker_gray"
+            android:layout_marginTop="24dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintTop_toBottomOf="@id/tweet_content"
+            app:layout_constraintLeft_toRightOf="@id/profile_image"
+            />
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/tweet_content"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@id/tweet_divider"
             app:layout_constraintStart_toEndOf="@id/profile_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
@@ -82,30 +89,30 @@
             <ImageButton
                 android:id="@+id/btn_reply"
                 android:layout_width="0dp"
-                android:layout_height="24dp"
+                android:layout_height="16dp"
                 android:scaleType="centerInside"
                 android:layout_weight="1"
-                android:src="@drawable/ic_launcher_background"
+                android:src="@drawable/reply"
                 android:background="?attr/selectableItemBackgroundBorderless" />
 
             <!-- Retweet Button -->
             <ImageButton
                 android:id="@+id/btn_retweet"
                 android:layout_width="0dp"
-                android:layout_height="24dp"
+                android:layout_height="16dp"
                 android:scaleType="centerInside"
                 android:layout_weight="1"
-                android:src="@drawable/ic_launcher_background"
+                android:src="@drawable/retweet"
                 android:background="?attr/selectableItemBackgroundBorderless" />
 
             <!-- Like Button -->
             <ImageButton
                 android:id="@+id/btn_like"
                 android:layout_width="0dp"
-                android:layout_height="24dp"
+                android:layout_height="16dp"
                 android:scaleType="centerInside"
                 android:layout_weight="1"
-                android:src="@drawable/ic_launcher_background"
+                android:src="@drawable/like"
                 android:background="?attr/selectableItemBackgroundBorderless"/>
 
         </LinearLayout>
