--- a/TweetAndroidApp/app/src/main/res/menu/menu_home.xml
+++ b/TweetAndroidApp/app/src/main/res/menu/menu_home.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/action_logout"
         android:title="Logout"
-        android:icon="@drawable/ic_launcher_background"
+        android:icon="@drawable/logout"
         app:showAsAction="always" />
 </menu>
