--- a/TweetAndroidApp/app/src/main/res/layout/fragment_home.xml
+++ b/TweetAndroidApp/app/src/main/res/layout/fragment_home.xml
@@ -27,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
-            app:srcCompat="@drawable/ic_launcher_background" />
+            android:scaleType="fitXY"
+            app:srcCompat="@drawable/write" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
