--- a/TweetAndroidApp/app/src/main/res/layout/fragment_login.xml
+++ b/TweetAndroidApp/app/src/main/res/layout/fragment_login.xml
@@ -18,7 +18,7 @@
             android:id="@+id/app_logo"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            app:srcCompat="@drawable/ic_launcher_background"
+            app:srcCompat="@drawable/main_logo"
             android:layout_marginBottom="32dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,12 +31,24 @@
             android:id="@+id/welcome_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome to TweetApp!"
+            android:text="@string/welcome_to_tweetapp"
             android:textStyle="bold"
             android:textSize="24sp"
-            android:layout_marginBottom="24dp"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/app_logo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/welcome_message_dfinity"
+            />
+        <TextView
+            android:id="@+id/welcome_message_dfinity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/powered_by_dfinity"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintTop_toBottomOf="@id/welcome_message"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/username_input"
@@ -53,7 +65,7 @@
             android:text="@={viewModel.userId}"
             android:textColor="@color/editTextColor"
             android:textColorHint="@color/editTextHintColor"
-            app:layout_constraintTop_toBottomOf="@id/welcome_message"
+            app:layout_constraintTop_toBottomOf="@id/welcome_message_dfinity"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/continue_button"
